Huellas/force-app/main/default/objects/Adopcion__c/Adopcion__c.object-meta.xml
<CustomObject>
    <description>Gestiona proceso de adopción, permite rastrear y organizar las etapas del proceso de adopción de mascotas</description>
    <label>Adopción</label>
    <nameField>
        <displayFormat>ADP-{00000}</displayFormat>
        <label>Adopción</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adopciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>