Huellas/force-app/main/default/objects/Adopcion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contacto que realiza la adopción.</description>
    <inlineHelpText>Selecciona al contacto asociado a esta adopción.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adopciones</relationshipLabel>
    <relationshipName>Adopciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>