Huellas/force-app/main/default/objects/Adopcion__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado del proceso de adopción.</description>
    <inlineHelpText>Este campo se actualiza automáticamente según el progreso del proceso de adopción.</inlineHelpText>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>En aprobación</fullName>
            </value>
            <value>
                <fullName>A la espera de búsqueda de mascotas</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>