Huellas/force-app/main/default/objects/Adopcion__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <description>Registra la fecha en la que se llevó a cabo la adopción.</description>
    <inlineHelpText>Ingrese la fecha exacta de adopción. Asegúrese de que no sea anterior a la fecha actual ni fuera del mes en curso.</inlineHelpText>
    <label>Fecha</label>
    <required>true</required>
    <type>Date</type>
</CustomField>