Huellas/force-app/main/default/objects/Adopcion__c/fields/Mascota__c.field-meta.xml
<CustomField>
    <fullName>Mascota__c</fullName>
    <description>Mascota asociada al proceso de adopción.</description>
    <inlineHelpText>Selecciona la mascota que será adoptada.</inlineHelpText>
    <label>Mascota</label>
    <referenceTo>Mascota__c</referenceTo>
    <relationshipLabel>Adopciones</relationshipLabel>
    <relationshipName>Adopciones</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>