Huellas/force-app/main/default/objects/Adopcion__c/validationRules/Invalidar_cambios_Estado_Rechazado.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalidar_cambios_Estado_Rechazado</fullName>
    <active>true</active>
    <description>Invalida que sea modificado el estado después que el proceso de adopción esta en rechazado.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Estado__c , &quot;Rechazado&quot;),
  ISCHANGED( Estado__c )
)</errorConditionFormula>
    <errorDisplayField>Estado__c</errorDisplayField>
    <errorMessage>El registro está bloqueado porque la solicitud de adopción fue rechazada.</errorMessage>
</ValidationRule>